# kona

./: .gitignore  AnalyzeSpark.ipynb  Cargo.toml  README.md  Scratch.ipynb  Spark.ipynb  build.rs  clippy.out.txt  dhat-heap.json  first.sql  flow.dot  flow.drawio  lop.dot  plan.dot  pop.dot  qgm.dot  qgm_raw.dot  qgm_resolved.dot  querygraph.drawio  rustfmt.toml  second.sql
.ipynb_checkpoints/: Scratch-checkpoint.ipynb  Spark-checkpoint.ipynb
bench/: lineitem_scan_with_filter.fsql
data/: Convert.ipynb  R.csv  README.txt  S.csv  T.csv  datatypes.csv  dept.csv  dept_details.csv  emp.csv  emp.parquet  first.sql  flow.dot
data/.ipynb_checkpoints/: Convert-checkpoint.ipynb
data/northwind/: dept.csv
docs/: design.txt  flow.drawio  tpch-columns.txt
duckdb/: Duckdb.ipynb
duckdb/.ipynb_checkpoints/: Duckdb-checkpoint.ipynb
mssql/: create.sql  load.sql  outerjoin.sql  scratch.sql
sql/: agg.fsql  aggregates.fsql  aggregates.sql  complex.fsql  csvdir.fsql  cte.fsql  datatypes.fsql  doc.fsql  groupby.fsql  join.fsql  join.sql  parquet.fsql  qgmpaper.sql  repartition.fsql  rst.fsql  scan.fsql  scratch.fsql  scratch.sql  simple.fsql  simple.sql  singletable.sql  spja.fsql  spja2.fsql  subquery.fsql  subquery.sql  tpch-csv-defs.fsql  tpch-customer.fsql  tpch-q1.fsql  tpch-q3.fsql  tpch.fsql  union.fsql
src/: api.rs  aps.rs  ast.rs  bitmap.rs  bitset.rs  blockmgr.rs  compile.rs  compiler.rs  consts.rs  csv.rs  csv22.rs  datum.rs  env.rs  error.rs  errors.rs  expr.rs  flow.rs  graph.rs  graphviz.rs  includes.rs  logging.rs  lop.rs  lop_repartition.rs  main.rs  metadata.rs  net.rs  netmgr.rs  node.rs  old_flow.rs  old_main.rs  pcode.rs  pop.rs  pop_aggregation.rs  pop_compile.rs  pop_csv.rs  pop_hash.rs  pop_hashagg.rs  pop_hashjoin.rs  pop_hashmatch.rs  pop_parquet.rs  (+12 more)
src/data/: .#emp.csv  emp.csv  flow.dot
src/data/empdir/partition-0/: emp3.csv
src/obsolete/: api.rs  blockmgr.rs  flow_enum.rs  flow_enum2.rs  flow_traitobjs.rs  node.rs
src/temp/flow-99/stage-3/consumer-1/: producer-0.csv
src/temp/flow-99/stage-3/consumer-2/: producer-3.csv
src/temp/flow-99/stage-4/consumer-0/: producer-2.csv
src/temp/flow-99/stage-4/consumer-1/: producer-1.csv  producer-2.csv
src/temp/flow-99/stage-4/consumer-2/: producer-0.csv  (+1 more)
temp/flow-99/stage-3/consumer-0/: producer-0.csv  producer-1.csv  producer-2.csv
temp/flow-99/stage-3/consumer-1/: producer-0.csv  producer-1.csv
temp/flow-99/stage-3/consumer-2/: producer-2.csv  producer-3.csv
temp/flow-99/stage-5/consumer-0/: producer-0.csv
temp/flow-99/stage-5/consumer-1/: producer-1.csv
temp/flow-99/stage-6/consumer-0/: producer-0.csv
temp/flow-99/stage-6/consumer-1/: producer-1.csv
temp/flow-99/stage-6/consumer-2/: producer-2.csv
tests/: Spark.ipynb  cp2gold.sh  file.txt
tests/.ipynb_checkpoints/: Spark-checkpoint.ipynb
tests/gold/groupby/: lop.dot  pop.dot  qgm_raw.dot  qgm_resolved.dot
tests/gold/repartition/: lop.dot  pop.dot  qgm_raw.dot  qgm_resolved.dot
tests/gold/rst/: lop.dot  pop.dot  qgm_raw.dot  qgm_resolved.dot
tests/gold/spja/: lop.dot  pop.dot  qgm_raw.dot  qgm_resolved.dot
tests/output/aggregates/: lop.dot  qgm_raw.dot  qgm_resolved.dot
tests/output/groupby/: lop.dot  pop.dot  qgm_raw.dot  qgm_resolved.dot
tests/output/repartition/: lop.dot  pop.dot  qgm_raw.dot  qgm_resolved.dot
tests/output/rst/: lop.dot  qgm_raw.dot  qgm_resolved.dot
tests/output/spja/: lop.dot  pop.dot  qgm_raw.dot  qgm_resolved.dot
tmp/: lop.dot
