[package]
authors = ["Adarsh Pannu <13154869+adarshpannu@users.noreply.github.com>"]
edition = "2018"
name = "flare"
version = "0.1.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.6"

[dependencies]
clp = {git = "https://github.com/adarshpannu/clp"}
#mio = {version = "0.7" , features = ["os-poll", "os-util", "tcp", "udp", "uds"]}
typed-arena = "2.0.1"
log = "0.4.0"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive", "rc"] }
#serde_traitobject = "0.2.7"
bincode = "1.3.3"
chrono = "0.4"
#arrow2 = "0.4.0"
lalrpop-util = "0.19.6"
regex = "1"
slotmap = { version = "1.0", features = ["serde"] }
bitmaps = "3.1.0"
fstrings = "0.2.3"
itertools = "0.10"
partitions = "0.2.4"
bimap = "0.6.2"
