[package]
authors = ["Adarsh Pannu <13154869+adarshpannu@users.noreply.github.com>"]
build = "build.rs"
edition = "2018"
name = "yard"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.0"

[dependencies]
#mio = {version = "0.7" , features = ["os-poll", "os-util", "tcp", "udp", "uds"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
serde = {version = "1.0", features = ["derive", "rc"]}
typed-arena = "2.0.1"
#serde_traitobject = "0.2.7"
arrow2 = {version = "0.17.3", features = [
  "io_csv",
  "io_csv_read",
  "io_parquet",
  "io_ipc",
  "io_parquet_compression",
  "serde_types",
  "compute_filter",
  "compute_comparison",
  "compute_arithmetics",
  "compute_boolean",
  "compute_hash",
  "compute_take",
  "compute_cast"
]}
bimap = "0.6.2"
bincode = "1.3.3"
bitmaps = "3.1.0"
chrono = "0.4"
csv = "1.2.1"
fstrings = "0.2.3"
getset = "0.1.2"
itertools = "0.11.0"
lalrpop-util = "0.20.0"
partitions = "0.2.4"
regex = "1"
slotmap = {version = "1.0", features = ["serde"]}
self_cell = "1.0.1"
ahash = "0.8.3"
lazy_static = "1.4.0"
derivative = "2.2.0"