[package]
authors = ["Adarsh Pannu <13154869+adarshpannu@users.noreply.github.com>"]
build = "build.rs"
edition = "2018"
name = "kona"
version = "0.1.0"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dhat-heap = []    # if you are doing heap profiling

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.0"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
serde = {version = "1.0", features = ["derive", "rc"]}
arrow2 = {version = "0.18.0", features = [
  "io_csv",
  "io_csv_read",
  "io_parquet",
  "io_ipc",
  "io_parquet_compression",
  "serde_types",
  "compute_filter",
  "compute_comparison",
  "compute_arithmetics",
  "compute_boolean",
  "compute_hash",
  "compute_take",
  "compute_cast"
]}
bimap = "0.6.2"
bincode = "1.3.3"
bitmaps = "3.1.0"
chrono = "0.4.31"
csv = "1.2.1"
fstrings = "0.2.3"
getset = "0.1.2"
itertools = "0.12"
lalrpop-util = "0.20.0"
partitions = "0.2.4"
regex = "1"
slotmap = {version = "1.0", features = ["serde"]}
self_cell = "1.0.2"
ahash = "0.8.3"
lazy_static = "1.4.0"
derivative = "2.2.0"
dhat = "0.3.2"
fasthash = "0.4"
